apps/copyparty/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: copyparty
spec:
  template:
    spec:
      containers:
        - name: copyparty
          volumeMounts:
            - name: archives-data
              mountPath: /data/archives
            - name: downloads-data
              mountPath: /data/downloads
            - name: movies-data
              mountPath: /data/movies
            - name: music-data
              mountPath: /data/music
            - name: shows-data
              mountPath: /data/shows
            - name: staging-data
              mountPath: /data/staging
            - name: sukebe-doujins-data
              mountPath: /data/sukebe/Doujins
            - name: sukebe-scenes-data
              mountPath: /data/sukebe/Scenes
            - name: sukebe-shows-data
              mountPath: /data/sukebe/Shows
            - name: sync-data
              mountPath: /data/sync
            - name: timeline-data
              mountPath: /data/timeline
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: copyparty-config
        - name: archives-data
          persistentVolumeClaim:
            claimName: archives-data
        - name: downloads-data
          persistentVolumeClaim:
            claimName: downloads-data
        - name: movies-data
          persistentVolumeClaim:
            claimName: movies-data
        - name: music-data
          persistentVolumeClaim:
            claimName: music-data
        - name: shows-data
          persistentVolumeClaim:
            claimName: shows-data
        - name: staging-data
          persistentVolumeClaim:
            claimName: staging-data
        - name: sukebe-doujins-data
          persistentVolumeClaim:
            claimName: sukebe-doujins-data
        - name: sukebe-scenes-data
          persistentVolumeClaim:
            claimName: sukebe-scenes-data
        - name: sukebe-shows-data
          persistentVolumeClaim:
            claimName: sukebe-shows-data
        - name: sync-data
          persistentVolumeClaim:
            claimName: sync-data
        - name: timeline-data
          persistentVolumeClaim:
            claimName: timeline-data
        - name: startup-config
          configMap:
            name: copyparty
